syntax = "proto3";

package calculator.adder.v1;
option go_package = "github.com/kzmake/distributed-calculator/microservices/adder/api/adder/v1;adder";

import "google/api/annotations.proto";

service Adder {
  rpc Add(AddRequest) returns (AddResponse) {
    option (google.api.http) = {
      post: "/add"
      body: "*"
    };
  }
}

message AddRequest {
  double operand_one = 1;
  double operand_two = 2;
}

message AddResponse {
  double result = 1;
}
